      - package-file-is-executable
      - package-uses-dh-exec-but-lacks-build-depends
      - preinst-uses-dpkg-maintscript-helper-without-predepends
      - shlib-in-multi-arch-foreign-package
      - source-contains-waf-binary
      - syntax-error-in-control-file
      - syntax-error-in-debconf-template
    + Removed:
      - dh_dhelp-is-deprecated
      - maintainer-script-calls-deprecated-wm-menu-config
      - maintainer-script-does-not-check-for-existence-of-wm-menu-config
      - uploader-address-missing

  * checks/*:
    + [NT] Fixed assumptions about certain fields being present.
      Where needed, Lintian will make guesses to the most likely
      value (or the least "broken" value).
  * checks/binaries:
    + [NT] Allow libnss_* plugins in usr/lib.
  * checks/control-file{,.desc}:
    + [NT] Allow "pkg (= ${source:Version})" versioned dependency if
      pkg is architecture all.  This fixes a false-positive
      "weak-library-dev-dependency" for some mono packages.  Thanks
      to David Bremner for the report.  (Closes: #652602)
    + [NT] Emit a tag if there is a syntax error in d/control rather
      than just aborting the rest of the check.
    + [NT] Accepted patch from Gergely Nagy to catch dh-make vcs
      templates in comments.  Thanks to Paul Wise for suggesting this
      check.  (Closes: #657110)
  * checks/cruft{,.desc}:
    + [NT] Added dh-autoreconf as a build-depends alternative to
      libtool for suppressing ancient-libtool warning.  Thanks to
      Felix Geyer for the report.  (Closes: #650325)
    + [NT] Accepted patch from Paul Wise to detect COFF object
      files as Win32 binaries.
    + [NT] Properly handle unpacked being a symlink.
    + [NT] Accepted patch from Luca Falavigna to detect waf files
      with a binary payload.  (Closes: #654523)
  * checks/debconf:
    + [RA] Recognize Perl uses of debconf templates via metaget or
      settitle.
  * checks/debhelper{,.desc}: