@@ -167,12 +167,6 @@ Info: The maintainer field could not be parsed according to the rules in
  the Policy Manual.
 Ref: policy 5.6.2
 
-Tag: maintainer-not-full-name
-Severity: normal
-Certainty: possible
-Info: The "name" part of this maintainer field is just one word, so it
- might not be a full name.
-
 Tag: maintainer-address-looks-weird
 Severity: normal
 Certainty: possible
@@ -212,12 +206,6 @@ Certainty: certain
 Info: The uploader field could not be parsed according to the rules in
  the Policy Manual.
 Ref: policy 5.6.3
-
-Tag: uploader-not-full-name
-Severity: normal
-Certainty: possible
-Info: The "name" part of this uploader field is just one word, so it
- might not be a full name.
 
 Tag: uploader-address-looks-weird
 Severity: normal
