@@ -6,4 +6,3 @@ Test-For:
  uploader-address-is-on-localhost
  uploader-address-looks-weird
  uploader-address-malformed
- uploader-not-full-name
