@@ -20,7 +20,6 @@ W: foo++ source: ancient-standards-version 3.1.1 (current is 3.9.2)
 W: foo++ source: debian-watch-file-in-native-package
 W: foo++ source: debian-watch-file-unknown-version 0
 W: foo++ source: uploader-address-looks-weird Jeroen van Wolffelaar<jeroen@localhost.localdomain>
-W: foo++ source: uploader-not-full-name Frank
 W: foo++-helper: empty-binary-package
 W: foo++: latest-debian-changelog-entry-without-new-date
 W: foo++: readme-debian-contains-invalid-email-address foo@unknown
